# Hackathon-2

./: README.md
Phase-I-In-Memory-Python-Console-App/: .env  .gitignore  README.md  demo_clean_cli.py  demo_interactive.py  main.py  pyproject.toml  requirements.txt
Phase-I-In-Memory-Python-Console-App/.claude/agents/: todo-app-architect.md
Phase-I-In-Memory-Python-Console-App/.claude/agents/subagents/: cli-add-task.md  cli-task-toggler.md  cli-task-viewer.md  cli-ux-designer.md  task-deleter.md  task-updater.md
Phase-I-In-Memory-Python-Console-App/.claude/skills/: cli-ui-subagents-skills.md  cli-ux-designer-skills.md  core-agent-skills.md
Phase-I-In-Memory-Python-Console-App/.specify/memory/: constitution.md
Phase-I-In-Memory-Python-Console-App/history/prompts/001-todo-console-app/: 002-create-todo-spec.spec.prompt.md  003-create-todo-plan.plan.prompt.md  004-generate-todo-tasks.tasks.prompt.md  005-implement-todo-cli.implement.prompt.md
Phase-I-In-Memory-Python-Console-App/history/prompts/constitution/: 001-create-todoflow-constitution.constitution.prompt.md
Phase-I-In-Memory-Python-Console-App/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
Phase-I-In-Memory-Python-Console-App/todo_app/: __init__.py  application.py  clean_cli.py  cli.py  domain.py  interactive_cli.py
Phase-I-In-Memory-Python-Console-App/todo_app/tests/: __init__.py  test_application.py  test_cli.py  test_domain.py
Phase-I-In-Memory-Python-Console-App/todo_app/todo_app/: __init__.py
(+2 files in other folders)
